--- a/app/src/main/res/layout/activity_secciones.xml
+++ b/app/src/main/res/layout/activity_secciones.xml
@@ -30,7 +30,8 @@
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tabs"/>
+            android:id="@+id/tabs"
+            app:tabMode="scrollable"/>
 
     </android.support.design.widget.AppBarLayout>
 
