--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -5,8 +5,9 @@
 
     <item
         android:id="@+id/action_fuera_menu"
-        android:orderInCategory="100"
         android:title="@string/striing_vista_fragmentos"
+        android:icon="@drawable/ic_vista_fragmentos"
+        android:orderInCategory="100"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_introduccion"
