--- a/app/src/main/res/layout/fragment_player_list.xml
+++ b/app/src/main/res/layout/fragment_player_list.xml
@@ -17,7 +17,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="60dp"
+    android:layout_marginTop="1dp"
     android:orientation="vertical" >
 
 
@@ -35,6 +35,10 @@
         <ListView android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
+            android:layout_marginTop="?android:attr/actionBarSize"
+            android:paddingTop="@dimen/appbar_padding_top"
+
             android:drawSelectorOnTop="false"/>
 
         <!-- Here is the view to show if the list is emtpy -->
